--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "ava": "^0.25.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "flow-bin": "^0.64.0",
@@ -45,5 +47,9 @@
   },
   "lint-staged": {
     "*.{js,json,md}": ["prettier --write", "git add"]
+  },
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "webdriverio": "^4.10.1"
   }
 }
